Bug 442781 - Audio test feature does not work as expected
Summary: Audio test feature does not work as expected
Status: RESOLVED FIXED
Alias: None
Product: plasma-pa
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: git-master
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-21 16:17 UTC by Siddhartha
Modified: 2021-09-22 15:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Siddhartha 2021-09-21 16:17:05 UTC
SUMMARY
In Settings -> Audio, all playback devices have a "Test" button. I have a laptop speaker and a bluetooth device connected. The Test button for both the devices plays the test audio through whatever is the default playback device. Shouldn't the Test ignore the default setting and play through the individual devices associated with the Test button? If not, maybe there should be only one Test button?

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.80 (plasma-pa-git r968.20210916.61a0851)
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.5-arch1-1 (64-bit)
Comment 1 Nate Graham 2021-09-21 22:54:35 UTC
Hmm, it works for me with exactly that setup (laptop + bluetooth speaker).
Comment 2 Siddhartha 2021-09-21 23:16:37 UTC
Oh hmm. Should have mentioned I'm using pipewire implementation of pulseaudio. Maybe that's the issue? Will check with the native pulseaudio sometime.
Comment 3 Nate Graham 2021-09-21 23:20:25 UTC
Yeah, I'm using PipeWire too, on Fedora 34.
Comment 4 Bug Janitor Service 2021-09-22 11:40:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-pa/-/merge_requests/84
Comment 5 Nicolas Fella 2021-09-22 11:44:01 UTC
Git commit 5d9c82745f0169d7cad01f0b1bf67e64090dfe97 by Nicolas Fella.
Committed on 22/09/2021 at 11:39.
Pushed by ngraham into branch 'master'.

[speakertest] Force canberra driver to PulseAudio

Otherwise setting the device index via ca_context_change_device doesn't work and the test sound plays on the wrong device

M  +2    -0    src/sink.cpp

https://invent.kde.org/plasma/plasma-pa/commit/5d9c82745f0169d7cad01f0b1bf67e64090dfe97
Comment 6 Nate Graham 2021-09-22 11:44:29 UTC
Git commit d1f3a7002b961e621257bb592bab89040cc4dfe4 by Nate Graham, on behalf of Nicolas Fella.
Committed on 22/09/2021 at 11:44.
Pushed by ngraham into branch 'Plasma/5.23'.

[speakertest] Force canberra driver to PulseAudio

Otherwise setting the device index via ca_context_change_device doesn't work and the test sound plays on the wrong device


(cherry picked from commit 5d9c82745f0169d7cad01f0b1bf67e64090dfe97)

M  +2    -0    src/sink.cpp

https://invent.kde.org/plasma/plasma-pa/commit/d1f3a7002b961e621257bb592bab89040cc4dfe4
Comment 7 Siddhartha 2021-09-22 15:32:57 UTC
Nice. Thanks Nicolas and Nate!