[speakertest] Force canberra driver to PulseAudio

Otherwise setting the device index via ca_context_change_device doesn't work and the test sound plays on the wrong device

BUG: 442781


(cherry picked from commit 5d9c82745f0169d7cad01f0b1bf67e64090dfe97)